--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/textsplitters": "^1.0.1",
     "@neondatabase/serverless": "^1.0.2",
+    "ai": "^6.0.86",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
+    "groq-sdk": "^0.37.0",
+    "langchain": "^1.2.24",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
