--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
