--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/textsplitters": "^1.0.1",
     "@neondatabase/serverless": "^1.0.2",
+    "@xenova/transformers": "^2.17.2",
     "ai": "^6.0.86",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
