--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@huggingface/inference": "^4.13.12",
     "@langchain/textsplitters": "^1.0.1",
     "@neondatabase/serverless": "^1.0.2",
     "@xenova/transformers": "^2.17.2",
