--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@huggingface/inference": "^4.13.12",
     "@langchain/textsplitters": "^1.0.1",
     "@neondatabase/serverless": "^1.0.2",
     "@xenova/transformers": "^2.17.2",
@@ -24,6 +23,7 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.22.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^4.0.2",
     "react": "19.2.3",
